Bug 948337 - create BluetoothHfpManagerBase for audio manager access