dom/system/gonk/AudioManager.cpp
@@ -31,8 +31,7 @@
 #include "base/message_loop.h"
 
 #include "BluetoothCommon.h"
-#include "BluetoothProfileManagerBase.h"
-#include "BluetoothHfpManager.h"
+#include "BluetoothHfpManagerBase.h"
 
 #include "nsJSUtils.h"
 #include "nsCxPusher.h"
@@ -230,8 +229,8 @@ AudioManager::HandleBluetoothStatusChanged(nsISupports* aSubject,
 #ifdef MOZ_B2G_BT
   bool status;
   if (!strcmp(aTopic, BLUETOOTH_SCO_STATUS_CHANGED_ID)) {
-    BluetoothHfpManager* hfp =
-      static_cast<BluetoothHfpManager*>(aSubject);
+    BluetoothHfpManagerBase* hfp =
+      static_cast<BluetoothHfpManagerBase*>(aSubject);
     status = hfp->IsScoConnected();
   } else {
     BluetoothProfileManagerBase* profile =
